--- a/Simon Game Challenge/index.html
+++ b/Simon Game Challenge/index.html
@@ -11,6 +11,8 @@
 
 <body>
   <h1 id="level-title">Press A Key to Start</h1>
+  
+<!--  Button's Container  -->
   <div class="container">
 
     <div>
