--- a/arrayCardio2/index.html
+++ b/arrayCardio2/index.html
@@ -22,6 +22,7 @@
             { text: 'You are the best', id: 2039842 },
             { text: 'Ramen is my fav food ever', id: 123523 },
             { text: 'Nice Nice Nice!', id: 542328 }
+            ( text: 'What a world', id: 375656 }
         ];
 
         // Some and Every Checks
