--- a/clock/index.html
+++ b/clock/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-
+<!--   Main Clock Body   -->
     <div class="clock">
         <div class="clock-face">
             <div class="clockCenter"></div>
@@ -18,7 +18,7 @@
             <div class="hand secHand"></div>
         </div>
     </div>
-
+<!-- Javascript Linking -->
     <script src="index.js" charset="UTF-8"></script>
 </body>
 
